fix the layout problem in payment page html, css

--- a/payment_screen.css
+++ b/payment_screen.css
@@ -141,7 +141,6 @@ li a:hover {
     font-size: 1em;
     font-family: Arial, Helvetica, sans-serif;
     padding: 0.5em 0 .5em 0.5em;
-    display: none;
 }
 
 #account-details
@@ -149,6 +148,7 @@ li a:hover {
   opacity:0.7;
   color: black;
   text-align: center;
+  display: none;
 }
 
 #account-details table
@@ -187,7 +187,7 @@ li a:hover {
   color:red;
 }
 
-input,label,legend,form {
+#payment-form input,label,form, p {
   margin:0 auto;
   font-family: times-serif;
   font-size: 1em;
@@ -196,7 +196,13 @@ input,label,legend,form {
   padding: 0.5em 2.5% .5em 2.5%;
 }
 
-fieldset {
+#payment-form legend {
+  font-family: times-serif;
+  font-size: 1.528em;
+  font-weight: bold;
+}
+
+#payment-form fieldset {
   padding: 1em;
   border:1px solid;
   }
@@ -238,10 +244,11 @@ fieldset {
 
   #mouseRegion {
     width: 15.625em;
-    display:block;
+    font-family: times-serif;
+    font-size: 1.228em;
   }
 
-  #CardName, #CardNumber, #CardType, #ExpireMonth, #ExpireYear, #CVVNumber{
+  #CardName, #CardNumber, #CardType, #ExpireMonth, #ExpireYear, #CVVNumber, #send{
   width: 50%;
   }
 
@@ -273,12 +280,17 @@ fieldset {
   }
 
   #account-details {
-    width:50%;
+    width:70%;
     float:left;
     padding:10px;    
+    display: none;
   }
 
-  #CardName, #CardNumber, #CardType, #ExpireMonth, #ExpireYear, #CVVNumber{
+  #CardName, #CardNumber, #CardType, #ExpireMonth, #ExpireYear, #CVVNumber, #send{
   width: 50%;
+  }
+
+  #center {
+    width:100%;
   }
 }
